# ams-agent-factory

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
configs/: jama.yaml  memory.yaml  model_policy.yaml  providers.yaml
examples/ldo_core/: measurement_example.json  optimization_surface.yaml  requirements.yaml
src/ams_agent_factory/: cli.py
src/ams_agent_factory/agents/: optimizer.py  verifier.py
src/ams_agent_factory/core/: model_router.py
src/ams_agent_factory/tools/: autosearch.py
tests/: test_model_policy.py
wiki/: index.md
wiki/blocks/: ldo_core.md
wiki/contradictions/: open_conflicts.md
wiki/design_skills/: ldo_compensation_rules.md
